xrpl-wasm-stdlib/xrpl-macros/tests/hash256/fail_non_literal.stderr
error: expected string literal
 --> tests/hash256/fail_non_literal.rs:5:14
  |
5 |     hash256!(hash);
  |              ^^^^
